Fix broken css

--- a/style.css
+++ b/style.css
@@ -716,7 +716,7 @@ h6 {
 
 #call-to-action .cta-btn:hover {
   background: #8892b0;
-  border: 3px solid #586168b7;
+  border: 3px solid #fff;
 }
 
 /* Features Section
